fixed issue where on iPhone X content wa hidden behind the notch

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,4 +1,10 @@
+body {
+    padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
+    padding-top: env(safe-area-inset-top); /* iOS 11.2 */
+}
+
 .done {
     text-decoration: line-through !important;
     font-weight: bold;
 }
+
